Fix compatibility with python3
- fix `print(...)` methods
- use `functools.reduce`
- explicitely use `python3` when launching scripts

--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "for (path, dirs, files) in os.walk(code_dir): print [file for file in files if file.endswith('.py')]"
+    "for (path, dirs, files) in os.walk(code_dir): print([file for file in files if file.endswith('.py')])"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "data_dir = os.path.join(root_dir, 'sample_data')\n",
-    "for (path, dirs, files) in os.walk(data_dir): print path"
+    "for (path, dirs, files) in os.walk(data_dir): print(path)"
    ]
   },
   {
@@ -144,8 +144,8 @@
    },
    "outputs": [],
    "source": [
-    "print type(DM.X), DM.X.shape\n",
-    "print type(DM.t), DM.t.shape"
+    "print(type(DM.X), DM.X.shape)\n",
+    "print(type(DM.t), DM.t.shape)"
    ]
   },
   {
@@ -193,8 +193,8 @@
    "outputs": [],
    "source": [
     "DM.reloadData(filename=os.path.join('temp', 'first_20.pickle'))\n",
-    "print DM.X.shape\n",
-    "print DM.t.shape\n",
+    "print(DM.X.shape)\n",
+    "print(DM.t.shape)\n",
     "import shutil # Cleanup\n",
     "shutil.rmtree('temp', ignore_errors=True)"
    ]
@@ -219,8 +219,8 @@
    "source": [
     "train_data_dir = os.path.join(data_dir, 'train')\n",
     "DM.loadTrainData(train_data_dir)\n",
-    "print DM.X.shape\n",
-    "print DM.t.shape"
+    "print(DM.X.shape)\n",
+    "print(DM.t.shape)"
    ]
   },
   {
@@ -241,8 +241,8 @@
    "source": [
     "adapt_data_dir = os.path.join(data_dir, 'adapt')\n",
     "DM.appendSamples(data_file=\"X0\", data_dir=adapt_data_dir) # append adapt/X0.h5 to X\n",
-    "print DM.X.shape\n",
-    "print DM.t.shape"
+    "print(DM.X.shape)\n",
+    "print(DM.t.shape)"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -438,8 +438,8 @@
    },
    "outputs": [],
    "source": [
-    "    RESULT = DataManager()\n",
-    "    RESULT.X = M.predict(DM.X, num_predicted_frames=8)"
+    "RESULT = DataManager()\n",
+    "RESULT.X = M.predict(DM.X, num_predicted_frames=8)"
    ]
   },
   {
@@ -475,7 +475,7 @@
     "frame_num=8\n",
     "solution = DM.X[-frame_num:].ravel()\n",
     "prediction = RESULT.X.ravel()\n",
-    "print (\"RMSE = %5.2f\" % np.sqrt(mse(solution, prediction)))"
+    "print((\"RMSE = %5.2f\" % np.sqrt(mse(solution, prediction))))"
    ]
   },
   {
@@ -528,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "!python predictSpatioTemporal.py 0 $data_dir $out_dir $root_dir"
+    "!python3 predictSpatioTemporal.py 0 $data_dir $out_dir $root_dir"
    ]
   },
   {
@@ -539,7 +539,7 @@
    },
    "outputs": [],
    "source": [
-    "!python predictSpatioTemporal.py 1 $data_dir $out_dir $root_dir"
+    "!python3 predictSpatioTemporal.py 1 $data_dir $out_dir $root_dir"
    ]
   },
   {
