Submissions output folder

--- a/README.ipynb
+++ b/README.ipynb
@@ -562,7 +562,7 @@
     "import datetime\n",
     "from data_io import zip_submission\n",
     "the_date = datetime.datetime.now().strftime(\"%y-%m-%d-%H-%M\")\n",
-    "submission_filename = '../sample_submission_' + the_date + '.zip'\n",
+    "submission_filename = 'submissions/sample_submission_' + the_date + '.zip'\n",
     "zip_submission(submission_filename, root_dir)\n",
     "print(\"Submit the file: \" + submission_filename)"
    ]
