--- a/README.ipynb
+++ b/README.ipynb
@@ -377,7 +377,7 @@
    },
    "outputs": [],
    "source": [
-    "from model import Model\n",
+    "from model_diviyan_new import Model\n",
     "Model??"
    ]
   },
