--- a/README.ipynb
+++ b/README.ipynb
@@ -173,8 +173,8 @@
    "outputs": [],
    "source": [
     "from data_io import mkdir\n",
-    "mkdir('temp')\n",
-    "DM.saveData(data_file='temp/first_20', format='pickle', frames=(0, 20)) "
+    "mkdir('tmp')\n",
+    "DM.saveData(data_file='tmp/first_20', format='pickle', frames=(0, 20)) "
    ]
   },
   {
@@ -192,11 +192,11 @@
    },
    "outputs": [],
    "source": [
-    "DM.reloadData(filename=os.path.join('temp', 'first_20.pickle'))\n",
+    "DM.reloadData(filename=os.path.join('tmp', 'first_20.pickle'))\n",
     "print(DM.X.shape)\n",
     "print(DM.t.shape)\n",
     "import shutil # Cleanup\n",
-    "shutil.rmtree('temp', ignore_errors=True)"
+    "shutil.rmtree('tmp', ignore_errors=True)"
    ]
   },
   {
@@ -262,7 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "DM.display(start=0, end=625, step=125) # display the first fram of each video"
+    "DM.display(start=0, end=625, step=125) # display the first frame of each video"
    ]
   },
   {
@@ -273,7 +273,10 @@
    },
    "outputs": [],
    "source": [
-    "DM.display(start=420, end=490, step=5) # display every five frames"
+    "sample_index = 1\n",
+    "sample_start = sample_index * 125\n",
+    "sample_end = (sample_index + 1) * 125\n",
+    "DM.motion_display(start=sample_start, end=sample_start + 10, sleep=1)"
    ]
   },
   {
@@ -294,7 +297,7 @@
    },
    "outputs": [],
    "source": [
-    "DM.motion_history_image(start=420, end=490, step=5, tau=20, d=0.05) "
+    "DM.motion_history_image(start=375, end=370+125, step=5, tau=20, d=0.05) "
    ]
   },
   {
@@ -565,6 +568,235 @@
     "submission_filename = 'submissions/sample_submission_' + the_date + '.zip'\n",
     "zip_submission(submission_filename, root_dir)\n",
     "print(\"Submit the file: \" + submission_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from IPython import display\n",
+    "import matplotlib.pyplot as plt\n",
+    "img = DM.X[0]\n",
+    "\n",
+    "sf = fig.add_subplot()\n",
+    "sf.imshow(img, cmap='gray', interpolation='None')\n",
+    "sf.clf()\n",
+    "\n",
+    "# plt.clf()\n",
+    "#plt.imshow(DM.X[200], cmap='gray', interpolation='None')\n",
+    "#plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sf = fig.add_subplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tempfile import NamedTemporaryFile\n",
+    "\n",
+    "VIDEO_TAG = \"\"\"<video controls>\n",
+    " <source src=\"data:video/x-m4v;base64,{0}\" type=\"video/mp4\">\n",
+    " Your browser does not support the video tag.\n",
+    "</video>\"\"\"\n",
+    "\n",
+    "def anim_to_html(anim):\n",
+    "    if not hasattr(anim, '_encoded_video'):\n",
+    "        with NamedTemporaryFile(suffix='.mp4') as f:\n",
+    "            anim.save(f.name, fps=20, extra_args=['-vcodec', 'libx264'])\n",
+    "            print(f.name)\n",
+    "            video = open(f.name, \"rb\").read()\n",
+    "        anim._encoded_video = video.encode(\"base64\")\n",
+    "    \n",
+    "    return VIDEO_TAG.format(anim._encoded_video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "def display_animation(anim):\n",
+    "    plt.close(anim._fig)\n",
+    "    return HTML(anim_to_html(anim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import animation\n",
+    "\n",
+    "# First set up the figure, the axis, and the plot element we want to animate\n",
+    "fig = plt.figure()\n",
+    "ax = plt.axes(xlim=(0, 2), ylim=(-2, 2))\n",
+    "line, = ax.plot([], [], lw=2)\n",
+    "\n",
+    "# initialization function: plot the background of each frame\n",
+    "def init():\n",
+    "    line.set_data([], [])\n",
+    "    return line,\n",
+    "\n",
+    "# animation function.  This is called sequentially\n",
+    "def animate(i):\n",
+    "    x = np.linspace(0, 2, 1000)\n",
+    "    y = np.sin(2 * np.pi * (x - 0.01 * i))\n",
+    "    line.set_data(x, y)\n",
+    "    return line,\n",
+    "\n",
+    "# call the animator.  blit=True means only re-draw the parts that have changed.\n",
+    "anim = animation.FuncAnimation(fig, animate, init_func=init,\n",
+    "                               frames=100, interval=20, blit=True)\n",
+    "\n",
+    "# call our new function to display the animation\n",
+    "display_animation(anim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "def plot_movie_mp4(image_array):\n",
+    "    dpi = 32 #72.0\n",
+    "    xpixels, ypixels = image_array[0].shape[0], image_array[0].shape[1]\n",
+    "    fig = plt.figure(figsize=(ypixels/dpi, xpixels/dpi), dpi=dpi)\n",
+    "    im = plt.figimage(image_array[0])\n",
+    "\n",
+    "    def animate(i):\n",
+    "        im.set_array(image_array[i])\n",
+    "        return (im,)\n",
+    "\n",
+    "    anim = animation.FuncAnimation(fig, animate, frames=len(image_array))\n",
+    "    display(HTML(anim.to_html5_video()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plot_movie_mp4(DM.X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from JSAnimation import IPython_display\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "def plot_movie_js(image_array):\n",
+    "    dpi = 32.0\n",
+    "    xpixels, ypixels = image_array[0].shape[0], image_array[0].shape[1]\n",
+    "    fig = plt.figure(figsize=(ypixels/dpi, xpixels/dpi), dpi=dpi)\n",
+    "    #fig = plt.figure(figsize=(ypixels, xpixels))\n",
+    "    im = plt.figimage(image_array[0])\n",
+    "    # im = plt.imshow(image_array[0], cmap='gray', interpolation='None')\n",
+    "\n",
+    "    def animate(i):\n",
+    "        im.set_array(image_array[i])\n",
+    "        return (im,)\n",
+    "\n",
+    "    anim = animation.FuncAnimation(fig, animate, frames=len(image_array))\n",
+    "    display(IPython_display.display_animation(anim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plot_movie_js(DM.X[:125])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "DM.X[100].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "img.set_array(DM.X[250])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.show()"
    ]
   },
   {
